Updated todo with improvements to recommendations page.

--- a/recommendations/index.html
+++ b/recommendations/index.html
@@ -169,6 +169,10 @@ recommendations:
     link: https://www.youtube.com/watch?v=csyL9EC0S0c
     review: |
       A cynical presentation about a lot of different programming aspects, mostly realted to social issues.
+  - name: Functional Design Patterns
+    link: https://www.youtube.com/watch?v=srQt1NAHYC0
+    review: |
+      A very good presentation about functional programming concepts targeted towards programmers who know object-oriented programming.
 ---
 <!--
   - name: T
@@ -178,13 +182,6 @@ recommendations:
 -->
 <!--
   TODO:
-
-
-
-https://www.youtube.com/watch?v=lw6TaiXzHAE
-https://www.youtube.com/watch?v=QyJZzq0v7Z4
-https://www.youtube.com/watch?v=jlPaby7suOc
-https://www.youtube.com/watch?v=srQt1NAHYC0
 
 Extra (preserve):
 https://www.amazon.com/Working-Effectively-Legacy-Michael-Feathers/dp/0131177052
