--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Home - Johannes Qvarford's career site</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/layout.css?v=1646384211" />
-    
-  </head>
-  <body>
-    <header><h1>Johannes Qvarford's career site</h1></header>
-    <main><article>
+
+<head>
+  <meta charset="utf-8">
+  <title>Home - Johannes Qvarford's career site</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/css/layout.css?v=1646406868" />
+  
+</head>
+
+<body>
+  <header>
+    <h1>Johannes Qvarford's career site</h1>
+  </header>
+  <main><article>
     <h2>Welcome!</h2>
 
     <img class="self-picture" src="/assets/me.jpg" title="A picture of this site's author: Johannes Qvarford.">
@@ -28,16 +32,18 @@
     </p>
 </article>
 </main>
-    <nav>
-        <h2 class="nocontent">Navigation</h2>
-        <a href="/">Home</a>
-        <a href="/blog">Blog</a>
-        <!--<a href="/cv">CV</a>-->
-        <!--<a href="/about">About</a>-->
-    </nav>
-    <footer>
-        <a href="https://se.linkedin.com/in/johannes-qvarford-305905103">My LinkedIn</a>
-        <a href="https://github.com/johannes-qvarford">My Github</a>
-    </footer>
-  </body>
+  <nav>
+    <h2 class="nocontent">Navigation</h2>
+    <a href="/">Home</a>
+    <a href="/blog">Blog</a>
+    <a href="/recommendations">Recommendations</a>
+    <!--<a href="/cv">CV</a>-->
+    <!--<a href="/about">About</a>-->
+  </nav>
+  <footer>
+    <a href="https://se.linkedin.com/in/johannes-qvarford-305905103">My LinkedIn</a>
+    <a href="https://github.com/johannes-qvarford">My Github</a>
+  </footer>
+</body>
+
 </html>
