Working Effectively with Legacy Code

--- a/recommendations/index.html
+++ b/recommendations/index.html
@@ -125,6 +125,11 @@ recommendations:
     link: https://sandimetz.com/99bottles
     review: |
       A great book focused around teaching object-oriented design, how it relates to TDD, and how it's better to duplicate code than use the wrong abstraction.
+  - name: Working Effectively with Legacy Code
+    link: https://www.amazon.com/Working-Effectively-Legacy-Michael-Feathers/dp/0131177052
+    review: |
+      A great cookbook for ways to improve and make changes to legacy systems.
+      Highlights the importance of automated testing to improve quality over time.
   - name: David Schmitz - 10 Tips for failing badly at Microservices
     link: https://www.youtube.com/watch?v=r8mtXJh3hzM
     review: |
