A Philosophy of Software Design

--- a/recommendations/index.html
+++ b/recommendations/index.html
@@ -130,6 +130,11 @@ recommendations:
     review: |
       A great cookbook for ways to improve and make changes to legacy systems.
       Highlights the importance of automated testing to improve quality over time.
+  - name: A Philosophy of Software Design
+    link: https://www.amazon.com/Philosophy-Software-Design-John-Ousterhout/dp/1732102201
+    review: |
+      A code quality book that focuses a lot on improving the interfaces at system boundaries.
+      Has an interesting take on the value of comments.
   - name: David Schmitz - 10 Tips for failing badly at Microservices
     link: https://www.youtube.com/watch?v=r8mtXJh3hzM
     review: |
@@ -178,6 +183,7 @@ recommendations:
     link: https://www.youtube.com/watch?v=srQt1NAHYC0
     review: |
       A very good presentation about functional programming concepts targeted towards programmers who know object-oriented programming.
+
 ---
 <!--
   - name: T
