--- a/recommendations/index.html
+++ b/recommendations/index.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 title: Johannes Qvarford's Recommendations
-last_modified_at: 2022-03-04
+last_modified_at: 2022-03-07
+style: recommendations
 recommendations:
   - name: Breaking systems into modules
     link: https://www.tedinski.com/2018/08/14/modularity.html
