--- a/recommendations/index.html
+++ b/recommendations/index.html
@@ -27,7 +27,7 @@ recommendations:
   - name: Deconstructing the "Unix philosophy"
     link: https://www.tedinski.com/2018/05/08/case-study-unix-philosophy.html
     review: |
-      The article covers the advantages of "text as a universal interface" and the compasability of unix commands.
+      The article covers the advantages of "text as a universal interface" and the composability of unix commands.
       It also brings up that the division of commands may make sense from a developer point of view,
       but interactive users are more task-oriented.
       They don't want to have to cobble together often non-reusable shell scripts for the kind of tasks they are interested in.
@@ -35,13 +35,13 @@ recommendations:
   - name: Design duality and the expression problem
     link: https://www.tedinski.com/2018/02/27/the-expression-problem.html
     review: |
-      APIs can be categorised based on if they guarantee extensibility through additional variants, operations or neither.
+      APIs can be categorized based on if they guarantee extensibility through additional variants, operations or neither.
       Whatever extensibility category is promised disables adding internal changes in that category without breaking contracts.
       ADTs makes the fewest amount of guarantees and therefor enables the greatest internal flexibility if that is desired.
   - name: Epigrams in Programming
     link: https://cpsc.yale.edu/epigrams-programming
     review: |
-      Some fun ideas to think about. My favourite is "A LISP programmer knows the value of everything, but the cost of nothing."
+      Some fun ideas to think about. My favorite is "A LISP programmer knows the value of everything, but the cost of nothing."
       It highlights that building extensible solutions in programming often involves disregarding runtime efficiency to a certain degree.
       A very static program can be written very efficiently, but it may not be easy to evolve it in the direction that stakeholders need it to without rewrites.
   - name: Patterns vs. Higher Order Functions
@@ -52,7 +52,7 @@ recommendations:
     link: https://lexi-lambda.github.io/blog/2019/11/05/parse-don-t-validate/
     review: |
       Bake assumptions into your types to make invalid programs impossible to express.
-      e.g. Rather than send a list around, and verifying that it contains at least one element as a pre-condition everwhere,
+      e.g. Rather than send a list around, and verifying that it contains at least one element as a pre-condition everywhere,
       create a at-least-one element list, and use it everywhere that needs the pre-condition.
   - name: Testing at the boundaries
     link: https://www.tedinski.com/2019/03/19/testing-at-the-boundaries.html
@@ -63,7 +63,7 @@ recommendations:
     link: https://www.tedinski.com/2018/10/09/relationship-induction-and-tests.html
     review: |
       A critical critique of mocking and how it should be a last resort.
-      Code should be structured to make mocking next to uneccessary in unit tests.
+      Code should be structured to make mocking next to unnecessary in unit tests.
   - name: Types are the basic tool of software design
     link: https://www.tedinski.com/2018/12/05/types-as-design-tool.html
     review: |
@@ -76,21 +76,21 @@ recommendations:
   - name: "Domain-Driven Design: Tackling Complexity in the Heart of Software"
     link: https://www.dddcommunity.org/book/evans_2003/
     review: |
-      This book opened my eyes to how programming fits into organisations and their needs.
-      Not as something alien to be cornered off from the organisation, but as something that should constantly be involved.
+      This book opened my eyes to how programming fits into organizations and their needs.
+      Not as something alien to be cornered off from the organization, but as something that should constantly be involved.
       It showed me that creativity and empathy can be really important for a programmer.
 
   - name: Effective Java
     link: https://www.oreilly.com/library/view/effective-java/9780134686097/
     review: |
-      A book that really highlightes that to get the most from a programming languages you need to consider its' features as part of greater whole.
+      A book that really highlights that to get the most from a programming languages you need to consider its' features as part of greater whole.
       Some features are useful more often than others, and some have even become obsolete over time.
       Some patterns aren't explicit language features, but should be treated as if they were.
   - name: "Extreme Programming Explained: Embrace Change, Second Edition"
     link: https://www.oreilly.com/library/view/extreme-programming-explained/0321278658/
     review: |
       This book gave me insight into how it is to truly work iteratively, and what a great concept that is.
-      It helped me take one step at a time when coding, instead of attempting to make enourmous changes that were never really done and slow to test.
+      It helped me take one step at a time when coding, instead of attempting to make enormous changes that were never really done and slow to test.
       It also opened my eyes to why we write user stories, and how important users really are.
   - name: Large-Scale C++ Software Design
     link: https://www.amazon.com/Large-Scale-Software-Design-John-Lakos/dp/0201633620
@@ -116,7 +116,7 @@ recommendations:
   - name: "Mythical Man-Month, The: Essays on Software Engineering"
     link: https://www.oreilly.com/library/view/mythical-man-month-the/0201835959/
     review: |
-      A good historical piece of issues that plagued programming in 19th centuary, and that mostly still exists today but in a different shape.
+      A good historical piece of issues that plagued programming in 19th century, and that mostly still exists today but in a different shape.
       The <a href="https://en.wikipedia.org/wiki/Second-system_effect">second system effect</a> still lead to tools today that bite off more than they can chew.
   - name: The Pragmatic Programmer
     link: https://pragprog.com/titles/tpp20/the-pragmatic-programmer-20th-anniversary-edition/
@@ -139,7 +139,7 @@ recommendations:
   - name: David Schmitz - 10 Tips for failing badly at Microservices
     link: https://www.youtube.com/watch?v=r8mtXJh3hzM
     review: |
-      A funny presentation about how certain decisions can hurt more than others in preventing successuful adoption of microservices.
+      A funny presentation about how certain decisions can hurt more than others in preventing successful adoption of microservices.
   - name: YOW! 2013 - The SOLID Design Principles Deconstructed
     link: https://www.youtube.com/watch?v=tMW08JkFrBA
     review: |
@@ -179,7 +179,7 @@ recommendations:
   - name: Programming is terrible — Lessons learned from a life wasted
     link: https://www.youtube.com/watch?v=csyL9EC0S0c
     review: |
-      A cynical presentation about a lot of different programming aspects, mostly realted to social issues.
+      A cynical presentation about a lot of different programming aspects, mostly related to social issues.
   - name: Functional Design Patterns
     link: https://www.youtube.com/watch?v=srQt1NAHYC0
     review: |
