Remove redundant title text in blog post list

--- a/recommendations/index.html
+++ b/recommendations/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Johannes Qvarford's Recommendations
+title: Recommendations
 last_modified_at: 2022-03-07
 style: recommendations
 recommendations:
