Remove redundant title text in blog post list

--- a/recommendations/index.html
+++ b/recommendations/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Johannes Qvarford's Recommendations - Johannes Qvarford's career site</title>
+  <title>Recommendations - Johannes Qvarford's career site</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/layout.css?v=1646638519" />
+  <link rel="stylesheet" href="/css/layout.css?v=1646639020" />
   
-  <link rel="stylesheet" href="/css/recommendations.css?v=1646638519" />
+  <link rel="stylesheet" href="/css/recommendations.css?v=1646639020" />
   
 </head>
 
@@ -38,7 +38,7 @@ https://www.amazon.com/Refactoring-Patterns-Joshua-Kerievsky/dp/0321213351
 -->
 
 <article>
-    <h2>Johannes Qvarford's Recommendations</h2>
+    <h2>Recommendations</h2>
 
     <h3>Introduction</h3>
 
