--- a/outlines/404.html
+++ b/outlines/404.html
@@ -1,1 +1,1 @@
-<ol><li>Johannes Qvarford's career site</li><li>404<ol><li>This page could not be found.</li><li>Navigation</li></ol></li></ol>
+<ol><li>Johannes Qvarford's career site<ol><li>Navigation</li></ol></li></ol>
